stderr
Hiker.java:5: error: illegal start of expression
        return [1];
               ^
1 error
